--- a/src/app/battle-zone/sign-up/sign-up.component.html
+++ b/src/app/battle-zone/sign-up/sign-up.component.html
@@ -59,7 +59,7 @@
                 </a>
                 to complete your registration!
               </div>
-              <div class="text-sm text-center font-medium">
+              <div class="text-center font-medium">
                 Consider
                 <a
                   target="_blank"
@@ -68,6 +68,29 @@
                   >donating</a
                 >
                 to the winnings pot. (Leave a note that it's for the PBDL)
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </section>
+    } @else if (closed) {
+      <section class="space-y-2">
+        <mat-card appearance="outlined">
+          <mat-card-content>
+            <div class="space-y-4 px-2 py-6">
+              <div class="text-xl font-bold w-full text-center">
+                Sign ups for PDBL are now closed.
+              </div>
+              <div class="text-center">
+                Join the
+                <a
+                  target="_blank"
+                  href="https://discord.gg/FsxXcWFaF6"
+                  class="text-blue-600 font-bold hover:text-blue-700 hover:cursor-pointer"
+                >
+                  PDBL Discord Server
+                </a>
+                to get notified for the next season!
               </div>
             </div>
           </mat-card-content>
