add test guard route

--- a/src/app/league-zone/league/league.component.html
+++ b/src/app/league-zone/league/league.component.html
@@ -39,7 +39,7 @@
     <div class="widget-title">League Chat</div>
     <div class="widget-body">
       @if (leagueId) {
-        <pdz-chat [leagueId]="leagueId"></pdz-chat>
+        <pdz-chat [roomId]="leagueId"></pdz-chat>
       }
     </div>
   </div>
