--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -13,7 +13,7 @@
           </button>
           <button
             class="matchup-button"
-            routerLink="edit"
+            routerLink="form"
             [queryParams]="{ matchup: selectedMatchup._id }"
           >
             <mat-icon>edit</mat-icon>
