update opponent to add dynamic team choice

--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -41,7 +41,7 @@
       <ng-template matStepContent>
         <div class="team-container">
           <team-form
-            ruleset="Gen9 NatDex"
+            [ruleset]="ruleset ?? 'Gen9 NatDex'"
             [pokemonList$]="pokemonList$"
             [teamArray]="opponentForm.controls.team"
           ></team-form>
