fix opponent team form

--- a/src/app/util/forms/team-form/team-form.component.html
+++ b/src/app/util/forms/team-form/team-form.component.html
@@ -216,7 +216,7 @@
                       <div class="captain-container">
                         <div class="captain-subcontainer box-container">
                           <pdz-slide-toggle
-                            [ngModel]="monGroup.controls.tera.value"
+                            [formControl]="monGroup.controls.tera"
                             (checkedChange)="
                               setArrayControl(
                                 monGroup.controls.tera,
@@ -229,7 +229,7 @@
                             Tera Captain
                           </pdz-slide-toggle>
                           <pdz-slide-toggle
-                            [ngModel]="monGroup.controls.z.value"
+                            [formControl]="monGroup.controls.z"
                             (checkedChange)="
                               setArrayControl(
                                 monGroup.controls.z,
@@ -379,13 +379,13 @@
                         </div>
                       </ng-template>
                       <div class="cosmetic-container">
-                        <dz-slide-toggle
+                        <pdz-slide-toggle
                           [formControl]="monGroup.controls.shiny"
                           onSVG="shiny"
                           offSVG="shiny"
                         >
                           Shiny
-                        </dz-slide-toggle>
+                        </pdz-slide-toggle>
                         <mat-form-field class="small-form">
                           <mat-label>Nickname</mat-label>
                           <input
@@ -556,5 +556,7 @@
   </div>
 }
 <!-- @for (control of teamArray.controls; track $index) {
-  {{ control.value | json }}
-} -->
+  {{ control. | json }}
+}
+
+{{ pokemonList$ | async | json }} -->
