--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -77,6 +77,6 @@
         </div>
       }
     </div>
-    <button>Draft</button>
+    <button (click)="emitDraftPokemon()">Draft</button>
   </div>
 }
