--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -36,7 +36,7 @@
             <mat-label>Number Input</mat-label>
             <input matInput type="number" />
           </mat-form-field>
-          <pokemon-select></pokemon-select>
+          <pokemon-select ruleset="Gen9 NatDex"></pokemon-select>
           <mat-form-field>
             <mat-label>Select</mat-label>
             <mat-select>
