--- a/src/app/league-zone/league-rules-overview/league-rules-old/rules.component.scss
+++ b/src/app/league-zone/league-rules-overview/league-rules-old/rules.component.scss
@@ -43,9 +43,8 @@
 
 .rule-description {
   padding: 0 12px;
-  list-style: decimal;
 
-  & > li {
+  & > .rule-item {
     margin-bottom: 0.5rem;
   }
 }
@@ -56,13 +55,28 @@
   font-size: larger;
 }
 
-ul {
-  list-style-type: disc;
-  margin-left: 1rem;
-  font-weight: 600;
+:host ::ng-deep {
+  markdown {
+    ul {
+      list-style-type: disc !important;
+      list-style-position: inside !important;
+      font-weight: 600;
 
-  & > li {
+      & > li {
+        font-weight: 600;
+      }
+    }
+  }
+
+  ol {
+    list-style-type: nth !important;
+    margin-left: 1rem;
     font-weight: 600;
+    padding-left: 0.5rem;
+
+    & > li {
+      font-weight: 600;
+    }
   }
 }
 
